[package]
name = "evmcodegen"
version = "0.1.0"
authors = ["adria0 <adria@codecontext.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
rustc-hex = "2.1.0"
hex = "0.4.2"
clap = "2.33.3"
web3 = "0.8.0"
easycontract = { git = "https://github.com/adria0/ethworkshop-rustfest" }
hex-literal = "0.2.1"
