[package]
name = "oe_monitor"
version = "0.1.0"
authors = ["adria0 <adria@codecontext.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "3.1"
tokio = { version = "0.2", features = ["macros", "time"]  }
reqwest = {version = "0.10", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
